# TheEscape

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md
header/: Button.h  Camera.h  Game.h  Ghost.h  Map.h  Menu.h  MenuScene.h  MiniMap.h  Player.h  Scene.h  Texture.h  TextureManager.h  camera.h  fps_camera.h  pch.h  texture.h
src/: Ghost.cpp  Map.cpp  MiniMap.cpp  Player.cpp  TextureManager.cpp  camera.cpp  main.cpp  resource_manager.cpp  resource_manager.h  stb_image.cpp  texture.cpp  texture.h
